fix: remove padding from full-width alignment

--- a/assets/scss/components/main/_gutenberg.scss
+++ b/assets/scss/components/main/_gutenberg.scss
@@ -35,7 +35,6 @@
 	max-width: 100vw;
 	margin-left: calc(50% - 50vw);
 	margin-right: calc(50% - 50vw);
-	padding: 0 7.5px;
 }
 
 .alignwide {
